--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5"
   }
 }
