--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "protopie-bridge",
   "version": "1.0.0",
+  "description": "Bridge Protopie SSE / Connect",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "ws": "^8.13.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
