--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "protopie-bridge",
   "version": "1.0.0",
-  "description": "Bridge Protopie SSE / Connect",
+  "description": "Bridge ProtoPie ↔ Web",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
+    "express": "^4.21.1",
     "cors": "^2.8.5",
-    "ws": "^8.13.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "body-parser": "^1.20.2"
   }
 }
