--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "protopie-bridge",
   "version": "1.0.0",
-  "description": "Bridge ProtoPie ↔ Web",
-  "type": "module",
+  "description": "Bridge WebSocket entre ProtoPie Connect et le front-end",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.1",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.19.2",
+    "body-parser": "^1.20.2",
+    "ws": "^8.17.0"
   }
 }
