--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "protopie-bridge",
   "version": "1.0.0",
-  "description": "Bridge temps réel entre ProtoPie et une page web via WebSocket ou SSE",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "body-parser": "^1.20.2",
-    "ws": "^8.17.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
