--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "protopie-bridge",
   "version": "1.0.0",
+  "description": "Bridge ProtoPie ↔ Web",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2"
   }
